# light_python_practice_2026

./: .gitignore  JOURNAL.md  pyproject.toml
src/: README.md  config.py  main.py  student_meta.md
src/database/: db.py
src/logs_service/: logs.py
src/service/: compare.py  hasher.py  reports.py  scaner.py
tests/: test_compare.py  test_hasher.py  test_reports.py  test_scaner.py
