[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "indexer"
version = "0.1.0"
description = "Консольный индексатор папок на SQLite"
requires-python = ">=3.10"

[project.scripts]
indexer = "src.main:main"

[tool.setuptools]
packages = ["src", "src.database", "src.service", "src.logs_service"]